fix alignment and margins

--- a/home/wp-content/themes/teletype-child/style.css
+++ b/home/wp-content/themes/teletype-child/style.css
@@ -232,6 +232,7 @@ a:link:hover {
   z-index: 100; /* z-indexで最前面に持ってくる */
 }
 #main{
+	margin-left: auto;
 	width: 100%;
 }
 
@@ -242,10 +243,18 @@ a:link:hover {
   padding-right: 1.5em;
 }
 
+#post-single .row{
+	width: 95%;
+	max-width: 800px;
+	right: 0;
+	left: 0;
+	margin: auto;
+}
+
 #post-single > #main{
-	width: 90%;
+	width: 95%;
 	position: relative;
-	max-width: 600px;
+	max-width: 800px;
   right: 0;
   left: 0;
   margin: auto;
